[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://renderizacao-3d-de-um-projeto-de-poliplexo-baixo-comunicacoes-de-rede.jpg" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Renderizacao-3d-de-um-projeto-de-poliplexo-baixo-comunicacoes-de-rede" type="Sprite" parent="."]
position = Vector2( 512, 304 )
scale = Vector2( 0.258, 0.203 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 64.0
margin_top = 512.0
margin_right = 320.0
margin_bottom = 576.0
text = "SALVAR DADOS"

[node name="Button2" type="Button" parent="."]
margin_left = 384.0
margin_top = 512.0
margin_right = 640.0
margin_bottom = 576.0
text = "MOSTRAR LISTA"

[node name="Button3" type="Button" parent="."]
margin_left = 704.0
margin_top = 512.0
margin_right = 960.0
margin_bottom = 576.0
text = "MOSTRAR NOME"

[node name="RecebeNome" type="LineEdit" parent="."]
margin_left = 56.0
margin_top = 128.0
margin_right = 448.0
margin_bottom = 192.0

[node name="RecebeNumero" type="LineEdit" parent="."]
margin_left = 64.0
margin_top = 320.0
margin_right = 448.0
margin_bottom = 384.0

[node name="EtiquetaNome" type="Label" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 448.0
margin_bottom = 128.0
text = "NOME:"
align = 1
valign = 1

[node name="EtiquetaNumero" type="Label" parent="."]
margin_left = 64.0
margin_top = 256.0
margin_right = 448.0
margin_bottom = 320.0
text = "NÃšMERO:"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 576.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 448.0

[node name="MostraLista" type="Label" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 0.062
anchor_bottom = 0.036
margin_left = 16.0
margin_top = 24.0
margin_right = 344.192
margin_bottom = 146.176

[node name="MostraNome" type="Label" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_top = 224.0
margin_right = 368.0
margin_bottom = 360.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
